# openxrstub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
msvc-project/: sdl2stub.sln
msvc-project/sdl2stub/: sdl2stub.vcxproj
src/: main.cpp
